--- a/mainProject/courseCompassApp/templates/index.html
+++ b/mainProject/courseCompassApp/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TerraByte.</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -24,77 +24,7 @@
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     />
   </head>
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
-    body {
-      background: #eeeeee;
-      font-family: "Roboto", sans-serif;
-    }
-    .card {
-      width: 300px;
-      border: none;
-      border-radius: 15px;
-    }
-    .adiv {
-      background: #04cb28;
-      border-radius: 15px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-      font-size: 12px;
-      height: 46px;
-    }
-    .chat {
-      border: none;
-      background: #e2ffe8;
-      border-radius: 20px;
-    }
-    .bg-white {
-      border: 1px solid #e7e7e9;
-      font-size: 10px;
-      border-radius: 20px;
-    }
-    .myvideo img {
-      border-radius: 20px;
-    }
-    .dot {
-      font-weight: bold;
-    }
-    .form-control {
-      border-radius: 12px;
-      border: 1px solid #f0f0f0;
-      font-size: 14px;
-    }
-    .form-control:focus {
-      box-shadow: none;
-    }
-    .form-control::placeholder {
-      font-size: 15px;
-      color: #c4c4c4;
-    }
-    #chat-container {
-      height: 400px; /* Adjust the height as needed */
-      overflow-y: scroll;
-    }
-    /* Scrollbar track */
-    ::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
-
-    /* Scrollbar handle */
-    ::-webkit-scrollbar-thumb {
-      background: #87d37c;
-    }
-
-    /* Scrollbar handle on hover */
-    ::-webkit-scrollbar-thumb:hover {
-      background: green;
-    }
-
-    /* Scrollbar itself */
-    ::-webkit-scrollbar {
-      width: 10px;
-    }
-  </style>
+  <style></style>
   <body>
     <div class="container d-flex justify-content-center">
       <div class="card mt-5 w-75 h-75">
@@ -107,11 +37,9 @@
         </div>
         <div id="chat-container">
           <div class="d-flex flex-row p-3">
-            <img
-              src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-7.png"
-              width="30"
-              height="30"
-            />
+            <img src="{% static "assistant.png" %}" width="30" height="30"
+            class="rounded-circle" />
+
             <div class="chat ml-2 p-3" style="font-size: 15px !important">
               Hello and thank you for visiting TerraByte. I'm your AI assistant,
               here to help you navigate through our tech courses and answer any
@@ -165,7 +93,7 @@
               >
             </div>
             <img
-              src="https://img.icons8.com/color/48/000000/circled-user-male-skin-type-7.png"
+              src="{% static "user.png" %}"
               width="30"
               height="30"
             />
@@ -178,9 +106,10 @@
       responseDiv.innerHTML = `
         <div class="d-flex flex-row p-3">
         <img
-          src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-7.png"
+          src="{% static "assistant.png" %}"
           width="30"
           height="30"
+          class="rounded-circle"
         />
         <div class="chat ml-2 p-3">
           <span class="" id="${responseId}" style="font-size: 15px !important">. . .</span>
