--- a/mainProject/courseCompassApp/templates/static/styles.css
+++ b/mainProject/courseCompassApp/templates/static/styles.css
@@ -1,7 +1,7 @@
-{% comment %} @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 body {
-  background: #eeeeee;
-  font-family: "Roboto", sans-serif;
+  background: #eeeeee !important;
+  font-family: "Roboto", sans-serif !important;
 }
 .card {
   width: 300px;
@@ -19,7 +19,6 @@ body {
 .chat {
   border: none;
   background: #e2ffe8;
-  font-size: 10px !important;
   border-radius: 20px;
 }
 .bg-white {
@@ -36,12 +35,35 @@ body {
 .form-control {
   border-radius: 12px;
   border: 1px solid #f0f0f0;
-  font-size: 8px;
+  font-size: 14px;
 }
 .form-control:focus {
   box-shadow: none;
 }
 .form-control::placeholder {
-  font-size: 8px;
+  font-size: 15px;
   color: #c4c4c4;
-} {% endcomment %}
+}
+#chat-container {
+  height: 400px; /* Adjust the height as needed */
+  overflow-y: scroll;
+}
+/* Scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Scrollbar handle */
+::-webkit-scrollbar-thumb {
+  background: #87d37c;
+}
+
+/* Scrollbar handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: green;
+}
+
+/* Scrollbar itself */
+::-webkit-scrollbar {
+  width: 10px;
+}
